--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,6 +47,7 @@
    (стилі конкретних сторінок)
    ===================================================== */
 @import './components/profile-page';
+@import './components/recipes-page';
 
 
 
